bdr.BDR.scala.code
var fini = false
var mess = ""

while(!fini){
  
  if (estSurMessage()){
    
		mess = litMessage()
    if(mess == "R") droite
    
    if(mess == "L") gauche
    
    if(mess == "I"){
      droite; droite; avance;
    }
    
    if(mess == "A") avance;
    
    if(mess == "B"){
      avance ; avance;
    }
    if(mess == "C"){
      avance ; avance ; avance;
    }
       
    if(mess == "Z") recule;
       
    if(mess == "Y") {
      recule ; recule
    }
       
    if(mess == "X") {
      recule ; recule recule;
    }
    
  }
  
}